--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -44,7 +44,7 @@
 	\begin{beamerboxesrounded}[shadow=true]{XMLWriter et XMLParser}
 		\begin{itemize}
 			\item Traité au cas par cas
-			\item Création de XMLWriter et XMLParser
+			\item Création de nouveau XMLWriter et XMLParser
 		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
@@ -93,7 +93,7 @@
 \subsection{Tests}
 \begin{frame}\frametitle{Tests effectués}
 \begin{minipage}[c]{.9\linewidth}
-Tests unitaires compartatifs :
+Tests unitaires comparatifs :
 \begin{itemize}
 	\item Adaptateur <-> NanoXML
 	\item Assurent un comportement identique
@@ -116,6 +116,7 @@ Tests unitaires compartatifs :
 Principaux problèmes rencontrés :
 \begin{itemize}
 	\item Synchronisation des sources
+	\item Différence DOM et NanoXML
 	\item Xinclude
 	\item Numéros de ligne
 \end{itemize}
