--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -26,6 +26,6 @@ Merci de votre attention.
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>\frametitle{Questions}
 \begin{center}
-Questions?
+\includegraphics[width=.6\linewidth]{../image/questionMark.jpg}
 \end{center}
 \end{frame}
