--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -11,7 +11,7 @@
 \includegraphics[width=1\linewidth]{../image/agileDev.png}
 \end{frame}
 %------------------------------------------------------------------------------
-\begin{frame}\frametitle{Environnement de travail}
+\begin{frame}\frametitle{Gestion des sources}
 \begin{centering}
 	\begin{minipage}[c]{.6\linewidth}
 		\begin{beamerboxesrounded}[shadow=true,center]{Gestionnaire de version}
@@ -27,6 +27,11 @@
 		\end{beamerboxesrounded}
 	\end{minipage}
 	\vfill
+\end{centering}
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{Outil de travail}
+\begin{centering}
 	\begin{minipage}[c]{.6\linewidth}
 		\begin{beamerboxesrounded}[shadow=true,center]{Environnement de développement}
 			\centering
@@ -34,6 +39,14 @@
 		\end{beamerboxesrounded}
 	\end{minipage}
 	\vfill
+	\begin{minipage}[c]{.6\linewidth}
+		\begin{beamerboxesrounded}[shadow=true,center]{Outil de profiling}
+			\centering
+			\includegraphics[width=.3\linewidth]{../image/yourkit.jpg}
+		\end{beamerboxesrounded}
+	\end{minipage}
+	\vfill
+
 \end{centering}
 \end{frame}
 %------------------------------------------------------------------------------
@@ -48,7 +61,7 @@
 		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
-\vfil
+\vfill
 \begin{minipage}[c]{\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{XMLElement}
 		\begin{itemize}
@@ -57,8 +70,7 @@
 		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
-
-\vfil
+\vfill
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}
@@ -73,7 +85,6 @@
 \begin{minipage}[c]{.3\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{Représentation}
 		\centering
-		% TODO Ajout schema avec nano
 		\includegraphics[width=.8\linewidth]{../image/avecAdaptateur.png}
 	\end{beamerboxesrounded}
 \end{minipage}
@@ -112,13 +123,16 @@ Tests unitaires comparatifs :
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Principaux problèmes rencontrés}
-\begin{frame}\frametitle{Principaux problèmes rencontrés}
-Principaux problèmes rencontrés :
-\begin{itemize}
-	\item Synchronisation des sources
-	\item Différence DOM et NanoXML
-	\item Xinclude
-	\item Numéros de ligne
-\end{itemize}
+\begin{frame}\frametitle{Synchronisation des sources}
+\includegraphics[width=\linewidth]{../image/gitHubBranche.png}
 \end{frame}
 %------------------------------------------------------------------------------
+\begin{frame}\frametitle{Différences DOM, NanoXML}
+Différence DOM et NanoXML
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{XInclude}
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{Numéro de lignes}
+\end{frame}
