--- a/beamer/beamer.tex
+++ b/beamer/beamer.tex
@@ -72,7 +72,7 @@
 \section{Description du problème}
 \input{partie1}
 %------------------------------------------------------------
-\section{Réponse au problème}
+\section{Analyse du problème}
 \input{partie2}
 %------------------------------------------------------------
 \section{Réalisation de la solution}
