--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -2,18 +2,18 @@
 \subsection{Installateur logiciel}
 \begin{frame}\frametitle{Déploiement d'une application}
 \begin{itemize}
- \item Déploiement de l'application sur une machine
+ \item Nombreuses opérations
  \item Procédure parfois lourde...
  \item ...et délicate
 \end{itemize}
 \end{frame}
 %------------------------------------------------------------------------------
-\begin{frame}[fragile]\frametitle{Installation de Glassfish}
+\begin{frame}[containsverbatim]\frametitle{Installation de Glassfish}
 
 \centering
 \includegraphics[width=.3\linewidth]{../image/glassfishLogo.png}
 \vfill
-\begin{beamerboxesrounded}[shadow=true]{Proc\'edure d'installation de Glassfish-v2}
+\begin{beamerboxesrounded}[shadow=true]{Procédure d'installation de Glassfish-v2}
 	
 	\begin{verbatim}
 	java -Xmx256m -jar glassfish-installer-v2.1.jar;
@@ -65,7 +65,7 @@ But :
 \begin{minipage}[c]{.46\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{Open-Source}
 		\begin{itemize}
-		\item License Apache 2
+		\item Licence Apache 2
 		\item Projet Membre de Codehaus
 		\end{itemize}
 	\end{beamerboxesrounded}
@@ -82,7 +82,7 @@ But :
 \begin{frame}\frametitle{IzPack en action}
 \begin{minipage}[c]{\linewidth}
 \centering
-\includegraphics[height=0.5\textheight]{../dia/included/install/06.png}
+\includegraphics[width=\textwidth]{../dia/included/install/06.png}
 \end{minipage}
 \end{frame}
 %------------------------------------------------------------------------------
@@ -99,7 +99,7 @@ But :
 	\begin{beamerboxesrounded}[shadow=true]{Conséquences}
 		\begin{itemize}
 			\item Invisibles pour l'utilisateur
-			\item Génantes pour le développeur	
+			\item Génantes pour le développeur
 		\end{itemize}
 	\end{beamerboxesrounded}
 \end{frame}
