--- a/beamer/beamer.tex
+++ b/beamer/beamer.tex
@@ -53,6 +53,8 @@
 \vskip0pt%
 }
 
+% se débarasse des symboles de navigation en bas de la page
+\setbeamertemplate{navigation symbols}{}
 
 
 \title{Refactoring IzPack}
