--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -28,8 +28,8 @@
 \begin{frame}\frametitle{Installateur logiciel}
 But :
 \begin{itemize}
-	\item Automatiser les procédures d'installation
-	\item Assurer une intégration dans le système
+	\item Automatisation
+	\item Intégration dans le système
 	\item Aider l'utilisateur
 \end{itemize}
 \end{frame}
@@ -106,8 +106,8 @@ But :
 %------------------------------------------------------------------------------
 \begin{frame}\frametitle{Problèmes}
 \begin{itemize}
-	\item Comment supprimer NanoXML?
-	\item Par quoi le remplacer?
+	\item Comment améliorer la situation ?
+% 	\item Évolutivité ?
 	\item JAXP est-il adapté ?
 \end{itemize}
 \end{frame}
