--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -43,8 +43,8 @@ Utilisations principales :
 Critères importants dans IzPack :
 \begin{itemize}
 	\item Taille de la librairie
-	\item Facilité d'utilisation
 	\item Transition
+	\item Performances
 	\item Évolution
 \end{itemize}
 \end{frame}
