--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -83,6 +83,7 @@
 \begin{minipage}[c]{\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{XMLElement}
 		\begin{itemize}
+			\item Patron de conception adaptateur
 			\item Extraction de l'interface
 			\item Nouvelle implémentation
 		\end{itemize}
