Corrections partie3 et conclusion

--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -1,12 +1,11 @@
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>
 \frametitle{Conclusion}
-\begin{beamerboxesrounded}[shadow=true]{XML dans IzPack}
 \begin{itemize}
+	\item Fusion des modifications
 	\item NanoXML supprimé
-	\item JAXP et ses avantages ajouté
+	\item JAXP et ses avantages ajoutés
 \end{itemize}
-\end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>
@@ -14,13 +13,18 @@
 \begin{itemize}
 	\item Suivi des apports
 	\item Amélioration de IzPack
+	\begin{itemize}
+		\item Corrections de bug
+		\item Refactoring
+		\item Documentation
+	\end{itemize}
 \end{itemize}
 \end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>\frametitle{Fin de l'exposé}
 \begin{center}
-Merci de votre attention.
+\LARGE Merci de votre attention.
 \end{center}
 \end{frame}
 %------------------------------------------------------------------------------
