--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -176,15 +176,16 @@
 \hfill
 \begin{minipage}[c]{.4\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{DOM}
-		3  enfant
+		3  enfants
 	\end{beamerboxesrounded}
 \end{minipage}
 \vfill
 \end{centering}
 \end{frame}
 %------------------------------------------------------------------------------
-\begin{frame}\frametitle{XInclude}
-\end{frame}
-%------------------------------------------------------------------------------
-\begin{frame}\frametitle{Numéro de lignes}
+\begin{frame}\frametitle{Autres problèmes}
+\begin{itemize}
+ \item XInclude
+ \item Numéros de ligne
+\end{itemize}
 \end{frame}
