corrections live ev0r

--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -3,7 +3,7 @@
 \frametitle{Conclusion}
 \begin{beamerboxesrounded}[shadow=true]{XML dans IzPack}
 \begin{itemize}
-	\item NanoXML supprimé
+	\item NanoXML supprimée
 	\item JAXP et ses avantages ajouté
 \end{itemize}
 \end{beamerboxesrounded}
