--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -21,7 +21,7 @@
 	\end{minipage}
 	\vfill
 	\begin{minipage}[c]{.6\linewidth}
-		\begin{beamerboxesrounded}[shadow=true,center]{Hébergement de dépôt}
+		\begin{beamerboxesrounded}[shadow=true,center]{Hébergement de dépôts}
 			\centering
 			\includegraphics[width=.3\linewidth]{../image/githubLogo.png}
 		\end{beamerboxesrounded}
@@ -74,7 +74,7 @@
 \begin{minipage}[c]{\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{XMLWriter et XMLParser}
 		\begin{itemize}
-			\item Traité au cas par cas
+			\item Traitées au cas par cas
 			\item Création de nouveau XMLWriter et XMLParser
 		\end{itemize}
 	\end{beamerboxesrounded}
