--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -9,6 +9,7 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>
+\frametitle{Contribution}
 \begin{beamerboxesrounded}[shadow=true]{Contributeurs}
 \begin{itemize}
 	\item Suivi des apports
